Tue Dec 13 11:19:56 GMT 2011  Olly Betts <olly@survex.com>

	* NEWS,configure.ac: Update for 1.2.8.

Thu Dec 08 08:27:28 GMT 2011  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* omindex.cc: Improve --help output (and man page which is generated
	  from it).  Closes bug#572.

Thu Dec 08 04:53:40 GMT 2011  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* Makefile.am: Ship new header urldecode.h.

Thu Dec 08 04:46:18 GMT 2011  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* Makefile.am,cgiparam.cc,urldecode.h,urlenctest.cc: Add new
	  implementation of URL decoding - the old one didn't handle
	  various corner cases well, and had two cut and pasted variants
	  for handling a input from a C string (GET) or from stdin (POST).
	  Also add a new unit test program to test URL encoding and decoding.
	  Fixes bug#578.

Tue Dec 06 13:30:58 GMT 2011  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* scriptindex.cc: If no rules are found in the index script, report an
	  error and give up - this is inevitably the result of a mistake, and
	  adding empty documents to the database isn't helpful.

Tue Dec 06 13:28:32 GMT 2011  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* docs/omegascript.rst: Add note to discourage use of percentage
	  scores.
	* templates/query: Don't show the percentage score in the default
	  template.

Tue Dec 06 13:26:30 GMT 2011  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* configure.ac,runfilter.cc: If we don't get any data from a filter
	  for 5 minutes, give up - it has probably ended up blocked
	  indefinitely.

Tue Dec 06 12:51:24 GMT 2011  Olly Betts <olly@survex.com>

	* Backport changes from trunk:
	* templates/query: HTML escape topterms.
	* templates/godmode: HTML escape the contents of document values.

Tue Dec 06 12:48:24 GMT 2011  Olly Betts <olly@survex.com>

	* Backport change from trunk: